drag and drop debug