@@ -63,14 +63,15 @@
 
     <build>
         <plugins>
-              <plugin>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-maven-plugin</artifactId>
-                    <version>${javafx.maven.plugin.version}</version>
-                    <configuration>
-                          <mainClass>yuriy.weiss.javafx.training.MainForm</mainClass>
-                    </configuration>
-              </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.maven.plugin.version}</version>
+                <configuration>
+                    <mainClass>yuriy.weiss.javafx.training.MainForm</mainClass>
+                    <commandlineArgs>--add-opens javafx.graphics/javafx.scene.paint=ALL-UNNAMED</commandlineArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
